changed nav layout and functionality

--- a/about.html
+++ b/about.html
@@ -954,9 +954,8 @@ const newStyles = `
             </button>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="index.html#work">Work</a>
+                <a href="work.html">Work</a>
                 <a href="shop.html">Shop</a>
-                <a href="blog.html">Blog</a>
                 <a href="about.html">About</a>
             </div>
         </div>
@@ -969,17 +968,8 @@ const newStyles = `
                 <img src="images/FB_IMG_16262183613016065.jpg" alt="Profile" class="profile-img">
                 <div class="about-text">
                     <h3></h3>
-                    <div class="about-contact-info">
-                        <div class="contact-item">
-                            <i class="fas fa-envelope"></i>
-                            <span>siphosenkosi.m@yahoo.com</span>
-                        </div>
-                    </div>
-                    <p>Siphosenkosi Mlotshwa is a certified Software Engineer and Virtual Assistant passionate about empowering businesses and individuals to bring their visions to life through the power of technology. He combines a strong foundation in software development with a knack for streamlining workflows to deliver innovative solutions that bridge the gap between creativity and functionality.
-
-                        Professionally, Siphosenkosi serves as a Full Stack Engineer at Petro Pixels, where he specializes in creating user-friendly web and app interfaces, designing intuitive websites, and optimizing processes to help clients achieve their goals. With a commitment to growth and adaptability, he thrives on tackling challenges, exploring new opportunities, and exceeding expectations.
-                        
-                        Beyond his technical expertise, Siphosenkosi actively shares insights through his personal blog, covering topics like space, exploration, AI, and philosophy.</p>
+                    
+                    <p>Siphosenkosi is a dynamic frontend web and app developer who transforms digital visions into seamless, engaging user experiences. With a strong foundation in computer software and graphic design he combines technical expertise with creative insight to craft intuitive designs and innovative solutions. Whether he's coding a slick interface or sharing his thoughts on digital trends, Siphosenkosi’s work resonates with a vibrant community of tech enthusiasts. His passion for blending art with technology not only redefines what’s possible in the digital realm but also inspires others to explore, innovate, and push creative boundaries.</p>
                     <!--<div class="btn-group">
                         <button class="btn btn-primary" onclick="openResumeModal()">VIEW RESUME</button>
                         <button class="btn btn-outline" onclick="openCertModal()">VIEW CERTIFICATIONS</button>
