--- a/ai-global-stability.html
+++ b/ai-global-stability.html
@@ -395,6 +395,11 @@
     padding: 0 1rem; /* Add horizontal padding */
 }
 
+.article-content h1 {
+    text-align: center;
+    width: 100%;
+    margin: 2rem 0; /* Optional: Adjust spacing as needed */
+}
 
     </style>
 </head>
@@ -417,9 +422,8 @@
             </button>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="index.html#work">Work</a>
-                <a href="index.html#shop">Shop</a>
-                <a href="blog.html">Blog</a>
+                <a href="work.html">Work</a>
+                <a href="shop.html">Shop</a>
                 <a href="about.html">About</a>
             </div>
         </div>
