--- a/myth-of-meaning.html
+++ b/myth-of-meaning.html
@@ -393,6 +393,12 @@
     padding: 0 1rem; /* Add horizontal padding */
 }
 
+.article-content h1 {
+    text-align: center;
+    width: 100%;
+    margin: 2rem 0; /* Optional: Adjust spacing as needed */
+}
+
     </style>
 </head>
 <body>
@@ -414,9 +420,8 @@
             </button>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="index.html#work">Work</a>
+                <a href="work.html">Work</a>
                 <a href="shop.html">Shop</a>
-                <a href="blog.html">Blog</a>
                 <a href="about.html">About</a>
             </div>
         </div>
