--- a/parker-probe.html
+++ b/parker-probe.html
@@ -392,6 +392,19 @@
 
 .article-container {
     padding: 0 1rem; /* Add horizontal padding */
+    
+}
+
+.article-content h1 {
+    text-align: center;
+    width: 100%;
+    margin: 2rem 0; /* Optional: Adjust spacing as needed */
+}
+
+.article-content h1 {
+    text-align: center;
+    width: 100%;
+    margin: 2rem 0; /* Optional: Adjust spacing as needed */
 }
 
     </style>
@@ -415,9 +428,8 @@
             </button>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="index.html#work">Work</a>
+                <a href="work.html">Work</a>
                 <a href="shop.html">Shop</a>
-                <a href="blog.html">Blog</a>
                 <a href="about.html">About</a>
             </div>
         </div>
