fixed page tittles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             emailjs.init('6YdWPrE_MXY30SAKk');
         })();
     </script>
-    <title>Blog - Siphosenkosi Mlotshwa</title>
+    <title>Siphosenkosi Mlotshwa</title>
     <!-- Add your existing styles -->
     <style>
 
