--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
     </script>
 
 
-    <title>Siphosenkosi Mlotshwa</title>
+    <title>Work - Siphosenkosi Mlotshwa</title>
     <style>
         /* Reset and base styles */
         * {
