CHANGED NAV TEXT TO ALL CAPS, TEMPORARILY REMOVED HERO SECTION

--- a/about.html
+++ b/about.html
@@ -981,10 +981,10 @@ const newStyles = `
                 </div>
             </button>
             <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="work.html">Work</a>
-                <a href="shop.html">Shop</a>
-                <a href="about.html">About</a>
+                <a href="index.html">HOME</a>
+                <a href="work.html">WORK</a>
+                <a href="shop.html">SHOP</a>
+                <a href="about.html">ABOUT</a>
             </div>
         </div>
     </nav>
