--- a/willow-quantum-chip.html
+++ b/willow-quantum-chip.html
@@ -449,10 +449,10 @@
                 </div>
             </button>
             <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="work.html">Work</a>
-                <a href="shop.html">Shop</a>
-                <a href="about.html">About</a>
+                <a href="index.html">HOME</a>
+                <a href="work.html">WORK</a>
+                <a href="shop.html">SHOP</a>
+                <a href="about.html">ABOUT</a>
             </div>
         </div>
     </nav>
