added ne article

--- a/shop.html
+++ b/shop.html
@@ -1414,13 +1414,13 @@ const newStyles = `
                 <div class="tshirt-card">
                     <div class="tshirt-image-container">
                         <img src="images/Front__dostoevsky.png" alt="T-shirt 1 Front" class="tshirt-image front active">
-                        <img src="images/Back__dostoevsky.png" alt="T-shirt 1 Back" class="tshirt-image back">
+                        <img src="images/Back__7_-removebg-preview.png" alt="T-shirt 1 Back" class="tshirt-image back">
                         <div class="view-controls">
                             <button class="view-toggle-btn">View Back</button>
                         </div>
                     </div>
                     <div class="tshirt-info">
-                        <a href="https://siphosenkosi-mlotshwa.printify.me/product/18019927/what-would-dostoevssky-do" target="_blank" class="price-button">
+                        <a href="https://siphosenkosi-mlotshwa.printify.me/product/18019927/what-would-dostoevsky-do" target="_blank" class="price-button">
                             $34
                         </a>
                     </div>
