changed logo text

--- a/ai-global-stability.html
+++ b/ai-global-stability.html
@@ -458,7 +458,7 @@
         <div class="nav-container">
             <a href="index.html" class="logo">
                 <img src="images/VR_LOGO_1-removebg-preview.png" alt="Logo">
-                Siphosenkosi Mlotshwa
+                Siphosenkosi
             </a>
             <button class="mobile-menu-btn">
                 <div class="hamburger">
