--- a/about.html
+++ b/about.html
@@ -971,7 +971,7 @@ const newStyles = `
         <div class="nav-container">
             <a href="index.html" class="logo">
                 <img src="images/VR_LOGO_1-removebg-preview.png" alt="Logo">
-                Siphosenkosi Mlotshwa
+                Siphosenkosi
             </a>
             <button class="mobile-menu-btn">
                 <div class="hamburger">
@@ -997,8 +997,9 @@ const newStyles = `
                 <div class="about-text">
                     <h3></h3>
                     
-                    <p>Siphosenkosi is a dynamic frontend web and app developer who transforms digital visions into seamless, engaging user experiences. With a strong foundation in computer software and graphic design he combines technical expertise with creative insight to craft intuitive designs and innovative solutions. Whether he's coding a slick interface or sharing his thoughts on digital trends, Siphosenkosi’s work resonates with a vibrant community of tech enthusiasts. His passion for blending art with technology not only redefines what’s possible in the digital realm but also inspires others to explore, innovate, and push creative boundaries.</p>
-                    <!--<div class="btn-group">
+                    <p>Siphosenkosi Mlotshwa is a frontend web and app developer who merges technology with creativity to build seamless, engaging user experiences. With a strong foundation in software engineering and graphic design, he transforms digital concepts into intuitive, functional, and visually striking designs. His work goes beyond just coding interfaces—he explores the deeper intersections of technology, art, and human perception, challenging conventional boundaries in the digital space.
+
+                        When he’s not developing sleek web experiences, Siphosenkosi delves into the evolving nature of reality, information, and consciousness through his writing. His blog serves as a platform for thought-provoking discussions that bridge technology, futurism, and philosophical inquiry, inspiring others to question, innovate, and explore the limitless possibilities of both the digital and the existential realms.</p>                    <!--<div class="btn-group">
                         <button class="btn btn-primary" onclick="openResumeModal()">VIEW RESUME</button>
                         <button class="btn btn-outline" onclick="openCertModal()">VIEW CERTIFICATIONS</button>
                     </div> -->
