--- a/work.html
+++ b/work.html
@@ -1140,7 +1140,7 @@ const newStyles = `
         <div class="nav-container">
             <a href="#" class="logo">
                 <img src="images/VR_LOGO_1-removebg-preview.png" alt="Logo">
-                Siphosenkosi Mlotshwa
+                Siphosenkosi
             </a>
             <button class="mobile-menu-btn">
                 <div class="hamburger">
