updated mintwave project image

--- a/work.html
+++ b/work.html
@@ -1311,7 +1311,7 @@ const newStyles = `
                 <!-- NFT Marketplace Card -->
                 <div class="card">
                     <a href="https://nftmarketcommunity.netlify.app" target="_blank" class="card-link">
-                        <img src="images/NFT.jpeg" alt="Project 1">
+                        <img src="images/Against Abstract.jpeg" alt="Project 1">
                         <div class="card-content">
                             <h3 class="mintwave-title">mintwave</h3>
                             <p>NFT Marketplace & Community. With curated collections, artist spotlights, and a beginner-friendly NFT guide, this platform is at the intersection between creativity and blockchain technology.</p>
