commented out two apparel items

--- a/shop.html
+++ b/shop.html
@@ -1427,7 +1427,7 @@ const newStyles = `
                 </div>
 
                 <!-- T-shirt Card Two -->
-                <div class="tshirt-card">
+                <!--<div class="tshirt-card">
                     <div class="tshirt-image-container">
                         <img src="images/Front_vulture.png" alt="T-shirt Front" class="tshirt-image front active">
                         <img src="images/Back_VULTURE.png" alt="T-shirt Back" class="tshirt-image back">
@@ -1440,10 +1440,10 @@ const newStyles = `
                             $34
                         </a>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- T-shirt Card Three -->
-                <div class="tshirt-card">
+                <!--<div class="tshirt-card">
                     <div class="tshirt-image-container">
                         <img src="images/Front__goth.png" alt="T-shirt Front" class="tshirt-image front active">
                         <img src="images/Back__goth.png" alt="T-shirt Back" class="tshirt-image back">
@@ -1455,7 +1455,7 @@ const newStyles = `
                         <a href="https://siphosenkosi-mlotshwa.printify.me/product/18067951/gothic-morale" target="_blank" class="price-button">
                             $47
                         </a>
-                    </div>
+                    </div>-->
                 </div>
 
             </div>
