changed article thumbnail

--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@ const newStyles = `
                 </a>
 
                 <a href="willow-quantum-chip.html" class="card">
-                    <img src="images/quantum.jpeg" alt="Space Exploration" class="blog-img">
+                    <img src="images/willowCHIP.jpeg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
                         <h3>Google's Willow Quantum Chip: Bridging Realities or Redefining Them?</h3>
                         <div class="blog-meta">
@@ -1215,7 +1215,7 @@ const newStyles = `
 
                 <!-- Article 2 -->
                 <a href="myth-of-meaning.html" class="card">
-                    <img src="images/camus.jpeg" alt="Space Exploration" class="blog-img">
+                    <img src="images/mythOfMeaning.jpeg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
                         <h3>The Myth of Meaning: Albert Camus on Life, Rebellion, and Freedom</h3>
                         <div class="blog-meta">
