--- a/willow-quantum-chip.html
+++ b/willow-quantum-chip.html
@@ -462,7 +462,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/quantum.jpeg" alt="AI Brain" class="featured-image">
+                <img src="images/willowCHIP.jpeg" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1></h1>
