updated article images

--- a/alien-information-theory.html
+++ b/alien-information-theory.html
@@ -462,7 +462,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/info_theory.jpeg" alt="Alien Information Theory" class="featured-image">
+                <img src="images/Futuristic Glass Star.jpeg" alt="Alien Information Theory" class="featured-image">
             </div>
             <div class="article-header">
                 <h1></h1>
@@ -480,6 +480,10 @@
                 <p>Reality appears seamless, solid, and continuous. But at its most fundamental level, the universe is not made of solid objects—it is composed of discrete units of information, much like a digital system. Modern physics tells us that beneath the familiar world of atoms and molecules lies a realm of quantum mechanics, where particles exist in states of probability rather than fixed positions. Electrons, for example, do not orbit the nucleus of an atom in predictable paths like planets around a star. Instead, they exist in a superposition of states, their exact locations only becoming defined when measured. This suggests that reality does not exist in a definite form until it is observed, reinforcing the idea that the universe behaves less like a physical structure and more like an informational process.</p>
 
     <p>Andrew Gallimore's <em>Alien Information Theory</em> takes this idea further, arguing that the universe functions as a computational grid where consciousness interacts with encoded information. This challenges the traditional notion of a physical reality governed by immutable laws and instead suggests that everything we experience is the product of an underlying informational framework. If quantum mechanics reveals that fundamental particles exist in uncertain states until observed, then what is it that determines the final outcome? The answer may lie in the processing power of consciousness itself, which acts as an interpreter of the vast ocean of potential states, collapsing them into a tangible experience of reality.</p>
+
+    <div class="article-image">
+        <img src="images/info_theory.jpeg" alt="Alien Information Theory" class="featured-image">
+    </div>
 
     <p>In a computational system, everything boils down to information. Classical physics once viewed the universe as a machine composed of particles governed by deterministic laws, but modern advancements suggest that at the smallest scale, reality is pixelated, existing in discrete packets of energy and data. These fundamental bits of reality, known as qubits in quantum computing, are not just theoretical concepts. Experiments have shown that information can be transferred instantaneously between entangled particles, defying conventional notions of space and time. If information is the core structure of reality, then space itself might not be fundamental, but rather an emergent property of a deeper computational process.</p>
 
