--- a/creating-the-oasis.html
+++ b/creating-the-oasis.html
@@ -462,7 +462,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="img/Futuristic VR Experience.jpeg" alt="VR Experience" class="featured-image">
+                <img src="images/halliday.jpg" alt="VR Experience" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>Building the OASIS: A Tech Breakdown</h1>
