--- a/majorana.html
+++ b/majorana.html
@@ -462,7 +462,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/majorana1_1260x708_v2-1024x575.jpg" alt="AI Brain" class="featured-image">
+                <img src="images/majorana1_1260x708_v2-1024x575-removebg-preview.png" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1></h1>
