--- a/satellite-communication.html
+++ b/satellite-communication.html
@@ -481,7 +481,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Digital World Connectivity Map.jpeg" alt="AI Brain" class="featured-image">
+                <img src="images/leo.jpg" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>The Future of Satellite Communication Systems: Beyond Starlink</h1>
