--- a/the-real-reason-introverts-dont-fit-in.html
+++ b/the-real-reason-introverts-dont-fit-in.html
@@ -475,7 +475,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="img/Solitary Contemplation in Modern Minimalism.jpeg" alt="AI Brain" class="featured-image">
+                <img src="images/Contemplative Walk.jpeg" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>The Real Reason Introverts Don’t 'Fit In': Society’s Failure to Accept Their Nature</h1>
