updated logo text

--- a/myth-of-meaning.html
+++ b/myth-of-meaning.html
@@ -439,7 +439,7 @@
         <div class="nav-container">
             <a href="index.html" class="logo">
                 <img src="images/VR_LOGO_1-removebg-preview.png" alt="Logo">
-                Siphosenkosi
+                siphosenkosi
             </a>
             <button class="mobile-menu-btn">
                 <div class="hamburger">
@@ -485,6 +485,11 @@
         
                 <section>
                     <h2>The Absurd and the Myth of Sisyphus</h2>
+
+                    <div class="article-image">
+                        <img src="images/camus.jpeg" alt="AI Brain" class="featured-image">
+                    </div>
+
                     <p>Albert Camus, a luminary of existential philosophy, provides a lens through which we can scrutinize the absurdity of existence. He beckons us to ponder the arbitrariness of life and the challenge of finding meaning in a seemingly indifferent universe. Camus contends that life’s absurdity arises from the lack of external justification for our contingent existence. In his words:</p>
                     <blockquote>
                         <p>“That which is meaningless. Thus man’s existence is absurd because his contingency finds no external justification.”</p>
