updated article cover images

--- a/self-erasing-program.html
+++ b/self-erasing-program.html
@@ -483,7 +483,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Tech-Enthusiast at Work.jpeg" alt="AI Brain" class="featured-image">
+                <img src="images/Deserted ATM in the Wilderness.jpeg" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>The Self-Erasing Program: If Identity Is an Illusion, Who (or What) Are We?</h1>
