--- a/neuroscience-of-psychedelics.html
+++ b/neuroscience-of-psychedelics.html
@@ -483,7 +483,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Ethereal Energy Burst.jpeg" alt="AI Brain" class="featured-image">
+                <img src="images/Colorful Light Trails.jpeg" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>The Neuroscience of Psychedelics: How They Dissolve Reality and Rewire the Mind</h1>
