updated article images

--- a/dissolution-of-self.html
+++ b/dissolution-of-self.html
@@ -483,7 +483,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/p1Fragmented Introspection.jpeg" alt="AI Brain" class="featured-image">
+                <img src="images/Contemplative Profile in Green Light.jpeg" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>Beyond the Shell: The Dissolution of Self.</h1>
