--- a/last-illusion.html
+++ b/last-illusion.html
@@ -483,7 +483,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Surreal Stone Sculpture Scene.jpeg" alt="AI Brain" class="featured-image">
+                <img src="images/Urban_Minimalist_Scene-removebg-preview.png" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>The Last Illusion: What If There Is No Ultimate Truth?</h1>
