--- a/reality-as-an-algorithm.html
+++ b/reality-as-an-algorithm.html
@@ -483,7 +483,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Abstract Digital Glitch.jpeg" alt="AI Brain" class="featured-image">
+                <img src="images/Vintage_Computer_Monitor_with_Green_Text-removebg-preview (1).png" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
             <h1>Reality as an Algorithm: What If Everything Is Computation?</h1>
