updated article images

--- a/index.html
+++ b/index.html
@@ -1212,7 +1212,7 @@ const newStyles = `
                 
 
                 <a href="dissolution-of-self.html" class="card">
-                    <img src="images/Contemplative_Profile_in_Green_Light-removebg-preview.png" alt="Space Exploration" class="blog-img">
+                    <img src="images/Contemplative Profile in Green Light.jpeg" class="blog-img">
                     <div class="card-content">
                         <h3>Beyond the Shell</h3>
                         <h3>Part 1: The Dissolution of Self</h3>
@@ -1228,7 +1228,7 @@ const newStyles = `
                 </a>
                 
                 <a href="ai-human-consciousness.html" class="card">
-                    <img src="images/p2Human_and_Digital_Fusion-removebg-preview.png" alt="Space Exploration" class="blog-img">
+                    <img src="images/p2Human and Digital Fusion.jpeg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
                         <h3>Beyond the Shell</h3> 
                         <h3>Part 2: The Convergence of AI and Human Consciousness</h3>
