--- a/glitch-effect.html
+++ b/glitch-effect.html
@@ -483,7 +483,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Abstract Scratches and Specks.jpeg" alt="AI Brain" class="featured-image">
+                <img src="images/Futuristic Alleyway Scene.jpeg" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>The Glitch Effect: When Psychedelics Expose the Cracks in Reality</h1>
