updated article images

--- a/ai-human-consciousness.html
+++ b/ai-human-consciousness.html
@@ -483,7 +483,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Futuristic_Astronaut-Themed_Portrait-removebg-preview.png" alt="AI Brain" class="featured-image">
+                <img src="images/Meditative Humanoid Robot.jpeg" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>Beyond the Shell: The Convergence of AI and Human Consciousness.</h1>
