--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@ const newStyles = `
                 
 
                 <a href="dissolution-of-self.html" class="card">
-                    <img src="images/Modern_Astronaut_Portrait-removebg-preview.png" class="blog-img">
+                    <img src="images/Dramatic Woman Portrait.jpeg" class="blog-img">
                     <div class="card-content">
                         <h3>Beyond the Shell</h3>
                         <h3>Part 1: The Dissolution of Self</h3>
@@ -1242,7 +1242,7 @@ const newStyles = `
                 </a>
                 
                 <a href="ai-human-consciousness.html" class="card">
-                    <img src="images/Futuristic_Astronaut-Themed_Portrait-removebg-preview.png" alt="Space Exploration" class="blog-img">
+                    <img src="images/Meditative Humanoid Robot.jpeg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
                         <h3>Beyond the Shell</h3> 
                         <h3>Part 2: The Convergence of AI and Human Consciousness</h3>
