updated article images

--- a/ai-global-stability.html
+++ b/ai-global-stability.html
@@ -481,7 +481,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Synthesis of Biology and Technology - Human Brain Model with Circuit Board.jpeg" alt="AI Brain" class="featured-image">
+                <img src="images/Futuristic_Portrait-removebg-preview.png" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>AI and the Future of Global Stability</h1>
