--- a/about.html
+++ b/about.html
@@ -999,7 +999,7 @@ const newStyles = `
                     
                     <p>Siphosenkosi Mlotshwa is a frontend web and app developer who merges technology with creativity to build seamless, engaging user experiences. With a strong foundation in software engineering and graphic design, he transforms digital concepts into intuitive, functional, and visually striking designs. His work goes beyond just coding interfaces—he explores the deeper intersections of technology, art, and human perception, challenging conventional boundaries in the digital space.
 
-                        When he’s not developing sleek web experiences, Siphosenkosi delves into the evolving nature of reality, information, and consciousness through his writing. His magazine serves as a platform for thought-provoking discussions that bridge technology, futurism, and philosophical inquiry, inspiring others to question, innovate, and explore the limitless possibilities of both the digital and the existential realms.</p>                    <!--<div class="btn-group">
+                        When he’s not developing sleek web experiences, Siphosenkosi delves into the evolving nature of reality, information, and consciousness through his writing. This website serves as a platform for thought-provoking discussions that bridge technology, futurism, and philosophical inquiry, inspiring others to question, innovate, and explore the limitless possibilities of both the digital and the existential realms.</p>                    <!--<div class="btn-group">
                         <button class="btn btn-primary" onclick="openResumeModal()">VIEW RESUME</button>
                         <button class="btn btn-outline" onclick="openCertModal()">VIEW CERTIFICATIONS</button>
                     </div> -->
