added a new magazine section

--- a/about.html
+++ b/about.html
@@ -981,7 +981,8 @@ const newStyles = `
                 </div>
             </button>
             <div class="nav-links">
-                <a href="index.html">HOME</a>
+                <a href="index.html">JOURNAL</a>
+                <a href="magazine.html">MAGAZINE</a>
                 <a href="work.html">WORK</a>
                 <a href="shop.html">SHOP</a>
                 <a href="about.html">ABOUT</a>
