--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@ const newStyles = `
                 </a> -->
 
                 <a href="digital-after-life.html" class="card">
-                    <img src="images/Futuristic Gauge Design.jpeg" alt="Space Exploration" class="blog-img">
+                    <img src="images/Cloud-Headed Man.jpeg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
                         <h3>Can Consciousness Be Uploaded?</h3>
                         <div class="blog-meta">
