added new landing page and updated magazine page layout plus articles

--- a/work.html
+++ b/work.html
@@ -1230,7 +1230,7 @@ const newStyles = `
     
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
                 <img src="images/VR_LOGO_1-removebg-preview.png" alt="Logo">
                 siphosenkosi
             </a>
@@ -1242,11 +1242,11 @@ const newStyles = `
                 </div>
             </button>
             <div class="nav-links">
-                <a href="index.html">HOME</a>
-                <a href="work.html">WORK</a>
+                <a href="journal.html">JOURNAL</a>
+                <a href="magazine.html">MAGAZINE</a>
+                <a href="work.html">PROJECTS</a>
                 <a href="shop.html">SHOP</a>
                 <a href="about.html">ABOUT</a>
-                
             </div>
         </div>
     </nav>
