--- a/ai-global-stability.html
+++ b/ai-global-stability.html
@@ -468,9 +468,9 @@
                 </div>
             </button>
             <div class="nav-links">
-                <a href="index.html">JOURNAL</a>
+                <a href="journal.html">JOURNAL</a>
                 <a href="magazine.html">MAGAZINE</a>
-                <a href="work.html">WORK</a>
+                <a href="work.html">PROJECTS</a>
                 <a href="shop.html">SHOP</a>
                 <a href="about.html">ABOUT</a>
             </div>
