--- a/religious-tolerance.html
+++ b/religious-tolerance.html
@@ -451,8 +451,9 @@
                 </div>
             </button>
             <div class="nav-links">
-                <a href="index.html">HOME</a>
-                <a href="work.html">WORK</a>
+                <a href="journal.html">JOURNAL</a>
+                <a href="magazine.html">MAGAZINE</a>
+                <a href="work.html">PROJECTS</a>
                 <a href="shop.html">SHOP</a>
                 <a href="about.html">ABOUT</a>
             </div>
