updated magazine article tittles

--- a/Drifting-as-Rebellion.html
+++ b/Drifting-as-Rebellion.html
@@ -23,8 +23,8 @@
         })();
     </script>
 
-<title>Beyond the Shell: The Dissolution of Self</title>
-<meta name="description" content="Exploring the philosophical implications of identity and consciousness in Ghost in the Shell (1995), focusing on the dissolution of self.">
+<title>The Situationist Dérive — Drifting as Rebellion (1956)</title>
+<meta name="description" content="">
 
     <!-- Add your existing styles -->
     <style>
@@ -502,7 +502,7 @@
                 <!-- Article content goes here -->
                 
 
-    <h2>The Situationist Dérive — Drifting as Rebellion (1956)</h2>
+    <h2></h2>
     <p>In the digital world, we’re used to being directed — click this, swipe there, follow this path, consume that feed.
         But back in 1956, a group of radical thinkers known as the <strong>Situationist International</strong> invented something strange and quietly revolutionary:
         <strong>The Dérive</strong> — or, simply put, <strong>drifting</strong>.</p>
