--- a/pirate-radio.html
+++ b/pirate-radio.html
@@ -23,8 +23,8 @@
         })();
     </script>
 
-<title>Beyond the Shell: The Dissolution of Self</title>
-<meta name="description" content="Exploring the philosophical implications of identity and consciousness in Ghost in the Shell (1995), focusing on the dissolution of self.">
+<title>The Luminous Underground of Pirate Radio</title>
+<meta name="description" content="">
 
     <!-- Add your existing styles -->
     <style>
@@ -502,7 +502,7 @@
                 <!-- Article content goes here -->
                 
 
-    <h2>The Luminous Underground of Pirate Radio</h2>
+    <h2></h2>
     <p>Before the algorithm, before curated playlists, before the internet sterilized subculture — there was <strong>pirate radio</strong>.</p>
 
   <p>It didn’t ask for permission.<br>
