--- a/xenogothic.html
+++ b/xenogothic.html
@@ -23,8 +23,8 @@
         })();
     </script>
 
-<title>Beyond the Shell: The Dissolution of Self</title>
-<meta name="description" content="Exploring the philosophical implications of identity and consciousness in Ghost in the Shell (1995), focusing on the dissolution of self.">
+<title>Xenogothic — The Philosophy of the Lost Future</title>
+<meta name="description" content="">
 
     <!-- Add your existing styles -->
     <style>
@@ -502,7 +502,7 @@
                 <!-- Article content goes here -->
                 
 
-    <h2>Xenogothic — The Philosophy of the Lost Future</h2>
+    <h2></h2>
     <p>There’s a strange ache haunting our present moment.<br>
         It’s not nostalgia.<br>
         It’s not even regret.<br>
