updated journal images

--- a/edge-of-forever.html
+++ b/edge-of-forever.html
@@ -484,7 +484,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Futuristic Digital Tunnel.jpeg" alt="AI Brain" class="featured-image">
+                <img src="images/Person_on_Geometric_Structure_with_Laptop-removebg-preview.png" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>The Edge of Forever: Are We Trapped in an Endless Loop of Reality?</h1>
