--- a/master-illusion.html
+++ b/master-illusion.html
@@ -484,7 +484,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/hello_f-removebg-preview.png" alt="AI Brain" class="featured-image">
+                <img src="images/hello_f.jpg" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>The Master Illusion: How Identity is a Self-Generating Prison</h1>
