--- a/neuroscience-of-psychedelics.html
+++ b/neuroscience-of-psychedelics.html
@@ -484,7 +484,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Colorful_Light_Trails-removebg-preview.png" alt="AI Brain" class="featured-image">
+                <img src="images/Abstract_Human_Figure-removebg-preview (2).png" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>The Neuroscience of Psychedelics: How They Dissolve Reality and Rewire the Mind</h1>
