--- a/ai-human-consciousness.html
+++ b/ai-human-consciousness.html
@@ -484,7 +484,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Meditative Humanoid Robot.jpeg" alt="AI Brain" class="featured-image">
+                <img src="images/Meditative_Humanoid_Robot-removebg-preview.png" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>Beyond the Shell: The Convergence of AI and Human Consciousness.</h1>
