--- a/digital-after-life.html
+++ b/digital-after-life.html
@@ -465,7 +465,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Cloud-Headed Man.jpeg" alt="AI Brain" class="featured-image">
+                <img src="images/Human_vs._Machine_-_A_Portrait_in_Contrast-removebg-preview.png" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1></h1>
