updated landing page grid and nav tabs

--- a/about.html
+++ b/about.html
@@ -981,10 +981,9 @@ const newStyles = `
                 </div>
             </button>
             <div class="nav-links">
-                <a href="journal.html">JOURNAL</a>
-                <a href="magazine.html">MAGAZINE</a>
-                <a href="work.html">PROJECTS</a>
-                <a href="shop.html">SHOP</a>
+                <a href="magazine.html">FEED</a>
+                <a href="journal.html">CODE</a>
+                <a href="work.html">LAB</a>
                 <a href="about.html">ABOUT</a>
             </div>
         </div>
@@ -1002,16 +1001,16 @@ const newStyles = `
 
   <p>Welcome to the frequency.</p>
 
-  <p>I’m <strong>Siphosenkosi Mlotshwa</strong> — a coder, culture drifter, digital zine architect, and rogue philosopher moving between realities.
-  This platform isn’t a brand. It’s an <strong>organism</strong>. A living archive, a dérive through the edges of culture, technology, identity, and the architecture of the unreal.</p>
+  <p>I’m Siphosenkosi Mlotshwa — a coder, culture drifter, digital zine architect, and rogue philosopher moving between realities.
+  This platform isn’t a brand. It’s an organism. A living archive, a dérive through the edges of culture, technology, identity, and the architecture of the unreal.</p>
 
-  <p>I built this as a space for the <strong>unplaceable</strong> — for misfits, glitch prophets, culture hackers, and digital nomads navigating the cracks between worlds.
-  A place where <strong>subcultures, systems theory, psychogeography, and glitch art</strong> collide with streetwear, underground zines, and digital consciousness experiments.</p>
+  <p>I built this as a space for the unplaceable — for misfits, glitch prophets, culture hackers, and digital nomads navigating the cracks between worlds.
+  A place where subcultures, systems theory, psychogeography, and glitch art collide with streetwear, underground zines, and digital consciousness experiments.</p>
 
   <p>I grew up decoding systems — studying software engineering and design, while quietly dismantling the myths of identity and reality behind the screen.
   What started as blog posts and creative experiments mutated into this ever-evolving digital organism.</p>
 
-  <p><strong>I believe we’ve been here before.</strong><br>
+  <p>I believe we’ve been here before.<br>
   I believe we are trapped in feedback loops.<br>
   And I believe hacking culture and consciousness is how we wake up.</p>
 
@@ -1027,9 +1026,6 @@ const newStyles = `
   To question everything we’re handed.<br>
   And to document the fragments.</p>
 
-  <p><strong>You’re not here by accident.</strong><br>
-  <strong>You’ve been here before.</strong><br>
-  <strong>And this time, you’re not leaving empty-handed.</strong></p>
                 </div> 
             </div>
         </div>
