--- a/work.html
+++ b/work.html
@@ -1242,10 +1242,9 @@ const newStyles = `
                 </div>
             </button>
             <div class="nav-links">
-                <a href="journal.html">JOURNAL</a>
-                <a href="magazine.html">MAGAZINE</a>
-                <a href="work.html">PROJECTS</a>
-                <a href="shop.html">SHOP</a>
+                <a href="magazine.html">FEED</a>
+                <a href="journal.html">CODE</a>
+                <a href="work.html">LAB</a>
                 <a href="about.html">ABOUT</a>
             </div>
         </div>
@@ -1255,7 +1254,7 @@ const newStyles = `
 
     <section class="section" id="work">
         <div class="container">
-            <h6 class="section-title">FRONTEND WEB DESIGN WORK</h6>
+            <h6 class="section-title">FRONTEND WEB DESIGN</h6>
             <!-- Tech Stack Section -->
             <div class="section-tech-stack">
                 <div class="tech-item">
