--- a/alien-information-theory.html
+++ b/alien-information-theory.html
@@ -449,10 +449,9 @@
                 </div>
             </button>
             <div class="nav-links">
-                <a href="journal.html">JOURNAL</a>
-                <a href="magazine.html">MAGAZINE</a>
-                <a href="work.html">PROJECTS</a>
-                <a href="shop.html">SHOP</a>
+                <a href="magazine.html">FEED</a>
+                <a href="journal.html">CODE</a>
+                <a href="work.html">LAB</a>
                 <a href="about.html">ABOUT</a>
             </div>
         </div>
