added more images to article

--- a/worldwideboyz-jp.html
+++ b/worldwideboyz-jp.html
@@ -724,6 +724,10 @@
                     <img src="images/cosmicavi.jpg" alt="COSMIC BOI CHILLING" class="featured-image">
                 </div>
 
+                <div class="article-image">
+                    <img src="images/wwb_apparel.png" alt="worldwideboyz apparel" class="featured-image">
+                </div>
+
             </div>
         </div>
     </section>
