--- a/worldwideboyz.html
+++ b/worldwideboyz.html
@@ -692,7 +692,11 @@
                     </p>
 
                     <div class="article-image">
-                        <img src="images/cosmicavi.jpg" alt="AI Brain" class="featured-image">
+                        <img src="images/cosmicavi.jpg" alt="cosmicavi" class="featured-image">
+                    </div>
+
+                    <div class="article-image">
+                        <img src="images/wwb_apparel.png" alt="worldwideboyz apparel" class="featured-image">
                     </div>
 
                 
