edited article description

--- a/worldwideboyz.html
+++ b/worldwideboyz.html
@@ -23,7 +23,7 @@
         })();
     </script>
 
-<title>The Situationist Dérive — Drifting as Rebellion (1956)</title>
+<title>Inside the Mind of @COSMICWEB_IS_MINE: A Japan Transmission</title>
 <meta name="description" content="">
 
     <!-- Add your existing styles -->
