added new feature article and hero video background

--- a/about.html
+++ b/about.html
@@ -993,11 +993,11 @@ const newStyles = `
         <div class="container">
             <h2 class="section-title"></h2>
             <div class="about-content">
-                <img src="images/vans_umhlanga.jpg" alt="Profile" class="profile-img">
+                <img src="images/AVI.jpg" alt="Profile" class="profile-img">
                 <div class="about-text">
                     <h3></h3>
                     
-                    <h1>About Siphosenkosi Mlotshwa</h1>
+                    <h1>Siphosenkosi Mlotshwa</h1>
 
   <p>Welcome to the frequency.</p>
 
