adjusted glitch text size and added interview headings

--- a/worldwideboyz.html
+++ b/worldwideboyz.html
@@ -547,6 +547,8 @@
                 <p class="article-intro">
                     In a world dominated by clean aesthetics and algorithmically curated culture, @cosmicweb_is_mine is building a different kind of universe — one woven from the threads of street culture, glitchy digital chaos, music, and ancestral energy. Raised on technology, videogames, and the wisdom of a Yuta grandmother, his work exists at the strange intersection of sci-fi dystopias and inner human potential. In this intimate, unfiltered interview, @cosmicweb_is_mine invites us into his world — where conspiracies, symbolism, and rebellion fuse into one endlessly mutating creative signal. From the cosmic web to the streets of Japan, this is a story about breaking systems, blurring boundaries, and reclaiming authorship of the narrative. Welcome to the cosmic web.
                 </p>
+
+                <h3>THE INTERVIEW:</h3>
                 
                 <p class="interview-question">Your work feels like a collision of streetwear, glitch art, and cyberpunk, but there's also something uniquely Japanese in its DNA. How do these worlds collide inside your head — and what draws you to this intersection?</p>
                 
