edited misfit manifesto boot up command

--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,7 @@
         </div> -->
         
         <div class="manifesto-excerpt">
-          <p class="glitch-typing">"So go look in the mirror. Confess your love. Eat a pickle. And tune in to something strange, sacred, and real."</p>
+          <p class="glitch-typing">"Go look in the mirror, and confess your love. And then go eat a pickle."</p>
         </div>
       </div>
       
