fixed typewriter error

--- a/index.html
+++ b/index.html
@@ -1195,12 +1195,12 @@
         </div> -->
         
         <div class="manifesto-excerpt">
-          <p class="glitch-typing">"Go look in the mirror, and confess your love. And then go eat a pickle."</p>
+            <p class="glitch-typing">"Go look in the mirror, and confess your love. And then go eat a pickle"</p>
+          </div>
         </div>
-      </div>
       
       <button class="cyber-button">
-        <span class="button-text">DECRYPT FULL TRANSMISSION</span>
+        <span class="button-text">DECRYPT FULl TRANSMISSION</span>
         <span class="button-icon">⏵</span>
       </button>
     </div>
@@ -1405,7 +1405,7 @@
 
         document.addEventListener('DOMContentLoaded', () => {
   // Typewriter effect for manifesto excerpt
-  const manifestoText = "'So go look in the mirror. Confess your love. Eat a pickle. And tune in to something strange, sacred, and real.'";
+  const manifestoText = "'Go look in the mirror, and confess your love. And then go eat a pickle'";
   const typingElement = document.querySelector('.glitch-typing');
   
   if (typingElement) {
